<resources>
    <string name="app_name">AskNanterre</string>
    <string name="upvote_prefix">"%s"</string>
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_etudiant">Vers l\'interface étudiant</string>
    <string name="bottom_navigation_menu_prof">Vers l\'interface professeur</string>
    <string name="number_prompt">Choisi un nombre de questions</string>
    <string name="number_reponse_prompt">Choisi la bonne réponse</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="interface_professeur">Interface Professeur</string>
    <string name="interface_netudiant">Interface\nEtudiant</string>
    <string name="menu_principal_n">Menu principal\n</string>
    <string name="faire_un_quiz_n">Faire un quiz</string>
    <string name="listes_des_questions">Listes des questions</string>
    <string name="liste_des_quizs_n">Liste des quizs</string>
    <string name="interface_etudiant">Interface Etudiant</string>
    <string name="poser_une_question">Poser une question</string>
    <string name="liste_des_questions">Liste des questions</string>
    <string name="liste_des_nquizs">Liste des quizs</string>
    <string name="liste_des_nquizsn">Liste des quizs\n</string>
    <string name="menu_principal_n2">Menu principal\n</string>
    <string name="ajouter_un_cours_n">Ajouter un cours\n</string>
    <string name="ajouter_un_cours">Ajouter un cours</string>
    <string name="liste_des_cours">Liste des cours</string>
    <string name="interface_etudiant_poser_une_question">Interface Etudiant: Poser une question</string>
    <string name="poser_une_question_ouverte">Poser une question ouverte</string>
    <string name="poser_une_question_ferm_e">Poser une question fermée</string>
    <string name="liste_des_cours_n">Liste des cours\n</string>
    <string name="modifier_la_r_ponse_qui_sera_envoy_e_aux_tudiants">Modifier la réponse qui sera envoyée aux étudiants</string>
    <string name="votre_r_ponse">Votre réponse</string>
    <string name="annuler">Annuler</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="rechercher">Rechercher</string>
    <string name="option_de_tri">Option de tri</string>
    <string name="liste_des_questions_p">Liste des questions</string>
    <string name="diagramme_circulaire">Diagramme circulaire</string>
    <string name="diagramme_circulaire_d_taill">Diagramme circulaire détaillé</string>
    <string name="les_r_ponses_pr_d_finies">Les réponses prédéfinies</string>
    <string name="ecrivez_une_r_ponse_qui_sera_envoy_e_aux_tudiants">Ecrivez une réponse qui sera envoyée aux étudiants</string>
    <string name="valider">Valider</string>
    <string name="la_r_ponse_cette_question_est">La réponse à cette question est:</string>
    <string name="posez_une_question_qui_sera_envoy_e_aux_tudiants_avec_des_r_ponses_pr_d_finies">Posez une question qui sera envoyée aux étudiants avec des réponses prédéfinies</string>
    <string name="votre_question">Votre question</string>
    <string name="le_nombre_de_r_ponses_pr_d_finies">Le nombre de réponses prédéfinies</string>
    <string name="le_bonne_r_ponse">Le bonne réponse</string>
    <string name="la_difficult">La difficulté</string>
    <string name="posez_une_question_qui_sera_envoy_e_au_professeur">Posez une question qui sera envoyée au professeur</string>
    <string name="posez_une_question_qui_sera_envoy_e_au_professeur_avec_des_r_ponses_pr_d_finies">Posez une question qui sera envoyée au professeur avec des réponses prédéfinies</string>
    <string name="cr_ez_un_cours_auxquels_les_questions_et_les_r_ponses_seront_associ_es">Créez un cours auquel les questions et les réponses seront associées</string>
    <string name="nom_du_cours">Nom du cours</string>
    <string name="la_question">La question: \"</string>
    <string name="a_ete_ajoutee">\" a été ajoutée</string>
    <string name="le_quiz">Le quiz: \"</string>
    <string name="a_ete_ajoute">\" a été ajouté</string>
    <string name="le_cours">Le cours: \"</string>
    <string name="la_reponse">La réponse: \"</string>
    <string name="a_ete_supprimee">\" a été supprimée</string>
    <string name="a_ete_mise_a_jour">\" a été mise à jour</string>
    <string name="liste_des_questions_non_validees">Liste des questions non validées</string>
    <string name="liste_des_questions_validees">Liste des questions validées</string>
    <string name="a_ete_validee">\" a été validée</string>
    <string name="a_ete_upvote">\" a été Upvote</string>
    <string name="a_ete_downvote">\" a été downvote</string>
    <string name="a_ete_remise_en_neutre">\" a été remise en neutre</string>
    <string name="le_professeur_na_pas_repondu">Le professeur n\'a pas encore répondu à cette question</string>
    <string name="a_ete_supprime">\" a été supprimé</string>
    <string name="est_correcte">\" est correcte</string>
    <string name="est_fausse">\" est fausse</string>
    <string name="trier_par_date">Trier par date</string>
    <string name="trier_par_date_asc">Trier par date asc</string>
    <string name="trier_par_date_des">Trier par date des</string>
    <string name="trier_par_upvote">Trier par upvote</string>
    <string name="trier_par_downvote">Trier par downvote</string>
    <string name="trier_par_upvote_du_prof">Trier par upvote du prof</string>
    <string name="trier_par_downvote_du_prof">Trier par downvote du prof</string>
    <string name="trier_par_reponse_du_prof">Trier par réponse du prof</string>
    <string name="non_validees">non validées</string>
    <string name="validees">validées</string>
    <string name="trier_par_bonne_reponse">Trier par nombre de bonne réponse</string>
    <string name="trier_par_mauvaise_reponse">Trier par nombre de mauvaise réponse</string>
    <string name="trier_par_difficulte">Trier par difficulté</string>
    <string name="nombre_de_bonne_reponse">Bonne réponses</string>
    <string name="nombre_de_mauvaise_reponse">Mauvaises réponses</string>
    <string name="total">Total:\n</string>
    <string name="reponse_personalisee">Réponse personalisée</string>
    <string name="Il_faut_au_moins_choisir_une_reponse">Il faut au moins choisir une réponse</string>
    <string name="est_devenu_visible">\" est devenu visible</string>
    <string name="est_devenu_invisible">\" est devenu invisible</string>
    <string name="correcte"> (réponse correcte)</string>
    <string name="Le_nom_du_cours">Le nom du cours doit être composé de lettres et de numéros</string>
    <string name="Le_nom_de_la_reponse">La réponse ne doit pas être vide</string>
    <string name="Le_nom_de_la_question">La question ne doit pas être vide</string>
    <string name="Lune_des_reponses">Au moins l\'une de vos réponses est vide</string>
    <string name="trier_par_visibilite_asc">Trier par visibilité asc</string>
    <string name="trier_par_visibilite_des">Trier par visibilité des</string>
    <string name="menu_main_return">Retour</string>
    <string name="menu_main_home">Menu Principal</string>
    <string name="menu_main_help">Aide</string>
    <string name="apercu"> (Aperçu)</string>
    <string name="titre_du_cours">Titre du cours</string>
    <string name="date_de_la_cr_ation_du_cours">Date de la création du cours</string>
    <string name="confirmez_vous">Validez-vous ?</string>
    <string name="nom_de_la_question">Nom de la question</string>
    <string name="titre_de_la_question">Titre de la question</string>
    <string name="date_de_cr_ation_de_la_question">Date de création de la question</string>
    <string name="nom_du_quiz">Nom du quiz</string>
    <string name="titre_du_quiz">Titre du quiz</string>
    <string name="date_du_quiz">Date de la création du quiz</string>
    <string name="choix_de_reponse">Choix de réponse: </string>
    <string name="reponse_fausse"> (Réponse fausse)</string>
    <string name="reponse_bonne"> (Réponse bonne)</string>
    <string name="empty_list"> La liste est vide</string>
    <string name="empty_list_cours"> Aucun cours n\'est disponible</string>
    <string name="empty_list_quiz">" Aucun quiz n'est disponible"</string>
    <string name="empty_list_question"> Aucune question n\'est disponible</string>
    <string name="empty_list_reponse"> Aucune réponse n\'est disponible</string>
    <string name="page_aide_question">Liste des questions (Aide)</string>
    <string name="page_aide_quiz">Liste des quizs (Aide)</string>
    <string name="page_aide_cours">Liste des cours (Aide)</string>
    <string name="indique_qu_une_question_est_ferm_e">Indique qu\'une question est fermée</string>
    <string name="indique_qu_une_question_est_ouverte">Indique qu\'une question est ouverte</string>
    <string name="indique_qu_une_question_a_t_aim_e_par_le_professeur">Indique qu\'une question a été aimée par le professeur</string>
    <string name="indique_qu_une_question_n_a_pas_t_aim_e_par_le_professeur">Indique qu\'une question n\'a pas été aimée par le professeur</string>
    <string name="indique_le_nombre_d_tudiants_qui_ont_aim_la_question">Indique le nombre d\'étudiants qui ont aimé la question</string>
    <string name="indique_le_nombre_d_tudiants_qui_n_ont_pas_aim_la_question">Indique le nombre d\'étudiants qui n\'ont pas aimé la question</string>
    <string name="indique_que_le_professeur_a_r_pondu_la_question">Indique que le professeur a répondu à la question</string>
    <string name="indique_que_le_professeur_n_a_pas_encore_r_pondu_la_question">Indique que le professeur n\'a pas encore répondu à la question</string>
    <string name="indique_la_difficult_d_une_question_de_1_facile_3_difficile">Indique la difficulté d\'un quiz de 1 (facile) à 3 (difficile)</string>
    <string name="indique_le_nombre_de_bonnes_r_ponses">Indique le nombre de bonnes réponses</string>
    <string name="indique_le_nombre_de_mauvaises_r_ponses">Indique le nombre de mauvaises réponses</string>
    <string name="changer_la_visibilit_du_cours">Changer la visibilité du cours (Swipe à gauche)</string>
    <string name="supprimer_le_cours">Supprimer le cours (Swipe à gauche)</string>
    <string name="supprimer_le_quiz">Supprimer le quiz (Swipe à gauche)</string>
    <string name="supprimer_la_quetsion">Supprimer la question (Swipe à gauche)</string>
    <string name="indique_que_le_cours_est_visible_par_l_tudiant">Indique que le cours est visible par les étudiants</string>
    <string name="valider_la_question">Valider la question (Swipe à gauche si la question n\'a pas été validée)</string>
    <string name="upvoter_la_question_swipe_gauche_si_la_question_est_valid_e">Upvoter la question (Swipe à gauche si la question est validée)</string>
    <string name="downvoter_la_question_swipe_gauche_si_la_question_est_valid_e">Downvoter la question (Swipe à gauche si la question est validée)</string>
    <string name="toutes_vos_reponses">Toutes vos réponses doivent être différentes</string>
    <string-array name="number_arrays">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="number_reponse_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
