<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/posez_une_question_qui_sera_envoy_e_aux_tudiants_avec_des_r_ponses_pr_d_finies"/>


    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="top"
        android:background="@drawable/edittext_bg"
        android:hint="@string/votre_question"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/le_nombre_de_r_ponses_pr_d_finies"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/number_arrays"
        android:layout_marginTop="10dp"
        android:prompt="@string/number_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/mylinearlayout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/le_bonne_r_ponse"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/number_reponse_arrays"
        android:layout_marginTop="10dp"
        android:prompt="@string/number_reponse_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/la_difficult"/>

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/number_reponse_arrays"
        android:layout_marginTop="10dp"
        android:prompt="@string/number_reponse_prompt" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/annuler"
        android:id="@+id/button2"
        android:onClick="annuler"
        android:background="@drawable/mybutton2"
        android:textColor="#ffffff"
        android:drawableStart="@drawable/ic_arrow"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/valider"
        android:id="@+id/button"
        android:onClick="valider"
        android:background="@drawable/mybutton2"
        android:textColor="#ffffff"
        android:drawableStart="@drawable/ic_arrow"/>

    </RelativeLayout>

    </LinearLayout>

</ScrollView>