<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_navigation_menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_goStud"
        android:enabled="true"
        android:icon="@drawable/ic_arrow"
        android:title="@string/bottom_navigation_menu_etudiant"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_goProf"
        android:enabled="true"
        android:icon="@drawable/ic_arrow"
        android:title="@string/bottom_navigation_menu_prof"
        app:showAsAction="ifRoom" />
</menu>