<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:tint="@color/colorGrey"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/star"
            android:src="@drawable/ic_star"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/indique_la_difficult_d_une_question_de_1_facile_3_difficile"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:tint="@color/colorAccentDark"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/unlock"
            android:src="@drawable/ic_validate"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/indique_le_nombre_de_bonnes_r_ponses"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:tint="@color/colorRed"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/up"
            android:src="@drawable/ic_unvalidate"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/indique_le_nombre_de_mauvaises_r_ponses"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorSwipeRed"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:id="@+id/swapDelete"
                android:src="@drawable/ic_delete"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/supprimer_le_quiz"/>

    </LinearLayout>

</ScrollView>